<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/drb_cream_bg">

    <include layout="@layout/include_drb_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/drb_spacing_xl">

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_scan_viewfinder"
            android:layout_marginBottom="@dimen/drb_spacing_lg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wh_scan_instruction"
            style="@style/DrbText.Body"
            android:layout_marginBottom="@dimen/drb_spacing_lg"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wh_barcode_hint"
            style="@style/DrbTextInputLayout"
            android:layout_marginBottom="@dimen/drb_spacing_lg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBarcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLookup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wh_search"
            style="@style/DrbButton.Primary"
            android:layout_marginBottom="@dimen/drb_spacing_sm"/>

        <Button
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wh_open_scanner"
            style="@style/DrbButton.Outlined"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/drb_spacing_lg"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>
